2005-07-05  Alain Magloire
	Fix for PR 102327: ContentType framework.
	* model/org/eclipse/cdt/core/model/CoreModel.java
	* model/org/eclipse/cdt/internal/core/model/ContentTypeProcessor.java
	* model/org/eclipse/cdt/internal/core/model/TranslationUnit.java

2005-07-05  Robert O'Callahan <robert@ocallahan.org>

	fix for bug# 102434
	
	* model/org/eclipse/cdt/internal/model/CModelManager.java
	* util/org/eclipse/cdt/utils/som/parser/SOMParser.java
	* util/org/eclipse/cdt/utils/xcoff/parser/XCOFF32Parser.java
	
2005-07-04 David Inglis
	fix for bug# 101647
	
	* utils/org/eclipse/cdt/utils/elf/Elf.java
	
2005-06-29 Alain Magloire
	Fix for PR 102174 patch from Johane Woo.
	* utils/org/eclipse/cdt/utils/spawner/EnvironmentReader.java

2005-06-29 Alain Magloire
	Patch From Chris Wiebe fix PR 101386
	* utils/org/eclipse/cdt/utils/macho/MachO.java

2005-06-26 Vladimir Hirsl
	Fix for 101344: problem markers are not being removed from header files
	Fixed removing indexer problem markers originally created by indexing 
	header files not included by any source files.
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/AbstractIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java

2005-06-25 Alain Magloire
	Fix PR 91069: BinaryRunner search improvements from Chris Wiebe.
	* model/org/eclipse/cdt/internal/core/model/BinaryRunner.java

2005-06-25 Alain Magloire
	Fix PR 98788: Dealing with templates
	* model/org/eclipse/cdt/core/model/ICElement.java
	+ model/org/eclipse/cdt/core/model/IFunctionTemplate.java
	+ model/org/eclipse/cdt/core/model/IFunctionTemplateDeclaration.java
	+ model/org/eclipse/cdt/core/model/IMethodTemplate.java
	+ model/org/eclipse/cdt/core/model/IMethodTemplateDeclaration.java
	+ model/org/eclipse/cdt/core/model/IStructureTemplate.java
	+ model/org/eclipse/cdt/core/model/IStructureTemplateDeclaration.java
	* model/org/eclipse/cdt/core/model/ITemplate.java
